tests/ui/generator/drop-tracking-error-body.stderr
error[E0004]: non-exhaustive patterns: type `bool` is non-empty
  --> $DIR/drop-tracking-error-body.rs:6:11
   |
LL |     match true {}
   |           ^^^^
   |
   = note: the matched value is of type `bool`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match true {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
